# netbox-rs

./: Cargo.toml  README.md  git_push.sh
.openapi-generator/: FILES
docs/: Aggregate.md  Asn.md  Cable.md  CircuitCircuitTermination.md  CircuitsApi.md  Cluster.md  Contact.md  CustomField.md  CustomLink.md  DcimApi.md  DcimVirtualDeviceContextsList200Response.md  Device.md  DeviceType.md  DeviceWithConfigContext.md  ExportTemplate.md  ExtrasApi.md  ExtrasSavedFiltersList200Response.md  FhrpGroup.md  FrontPortRearPort.md  Interface.md  IpAddress.md  IpRange.md  IpamApi.md  JobResult.md  L2Vpn.md  Module.md  ModuleType.md  NestedVirtualDeviceContext.md  PowerFeed.md  PowerPanel.md  Prefix.md  Provider.md  Rack.md  RackReservation.md  RouteTarget.md  SavedFilter.md  Service.md  ServiceTemplate.md  Status12.md  StatusApi.md  (+53 more)
src/apis/: circuits_api.rs  configuration.rs  core_api.rs  dcim_api.rs  extras_api.rs  ipam_api.rs  mod.rs  schema_api.rs  status_api.rs  tenancy_api.rs  users_api.rs  virtualization_api.rs  wireless_api.rs
src/models/: action.rs  aggregate.rs  aggregate_family.rs  aggregate_request.rs  airflow.rs  asn.rs  asn_range.rs  asn_range_request.rs  asn_request.rs  auth_cipher.rs  auth_type.rs  available_asn.rs  available_ip.rs  available_prefix.rs  available_vlan.rs  bookmark.rs  bookmark_request.rs  cable.rs  cable_length_unit.rs  cable_request.rs  cable_status.rs  cable_termination.rs  cable_termination_request.rs  circuit.rs  circuit_circuit_termination.rs  circuit_circuit_termination_request.rs  circuit_request.rs  circuit_status.rs  circuit_type.rs  (+853 more)
