[package]
name = "netbox_rs"
version = "0.0.1"
authors = ["Julien Briault <dev@jbriault.fr>"]
edition = "2021"
repository = "https://github.com/juhnny5/netbox-rs"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
